--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
     <header class="header">
         <div class="container header-container">
             <nav class="navigation">
-                <a class="logo link" href="">Web<span class="logo__header">Studio</span></a>
+                <a class="logo nav_logo link" href="">Web<span class="logo__header">Studio</span></a>
                 <ul class="site-nav list">
                     <li class="site-nav__list">
-                        <a class="site-nav__link link" href="./index.html">Студия</a>
+                        <a class="site-nav__link link current" href="./index.html">Студия</a>
                     </li>
                     <li class="site-nav__list">
                         <a class="site-nav__link link current" href="./portfolio.html">Портфолио</a>
@@ -33,6 +33,11 @@
                     </li>
                 </ul>
             </nav>
+            <button type="button" class="header-burger" data-menu-button>
+                <svg class="header-burger_icon">
+                    <use href="./images/sprite.svg#icon-menu"></use>
+                </svg>
+            </button>
             <ul class="contact list">
                 <li class="contact__list">
                     <a class="contact__link link" href="mailto:info@devstudio.com">
@@ -50,6 +55,51 @@
                 </li>
             </ul>
         </div>
+        <div class="mobile-menu" data-menu>
+            <div class="container mobile-menu_container">
+                <button type="button" class="mobile-menu_close-btn" data-menu-close>
+                    <svg class="mobile-menu_icon">
+                        <use href="./images/sprite.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu_nav list">
+                    <li class="mobile-menu_item">
+                        <a href="./index.html" class="mobile-menu_link link">Студия</a>
+                    </li>
+                    <li class="mobile-menu_item">
+                        <a href="./portfolio.html" class="mobile-menu_link link">Портфолио</a>
+                    </li>
+                    <li class="mobile-menu_item">
+                        <a href="" class="mobile-menu_link link">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu_contact list">
+                    <li class="mobile-menu_contact-list">
+                        <a class="mobile-menu_contact-link link tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-menu_contact-list">
+                        <a class="mobile-menu_contact-link link mail"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-social-list">
+                    <li class="mobile-social-link list">
+                        <a class="mobile-social-link_icon link" href="">Instagram</a>
+                    </li>
+                    <li class="mobile-social-link list">
+                        <a class="mobile-social-link_icon link" href="">Twitter</a>
+                    </li>
+                    <li class="mobile-social-link list">
+                        <a class="mobile-social-link_icon link" href="">Facebook</a>
+                    </li>
+                    <li class="mobile-social-link list">
+                        <a class="mobile-social-link_icon link" href="">LinkedIn</a>
+                    </li>
+                </ul>
+                <ul class="li"></ul>
+            </div>
+        </div>
+    
     </header>
     <main>
         <section class="portfolio">
@@ -394,52 +444,54 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer section-bord">
         <div class="container footer-blok">
-            <div class="logo-address">
-                <a class="logo link" href="">Web<span class="logo-footer">Studio</span></a>
-                <address class="address-block">
-                    <ul class="address-list list">
-                        <li class="address-list__link"><a class="address-list link" href="" target="_blank"
-                                rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="address-list__link"><a class="address-list__mail link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="address-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div class="for-tablet">
+                <div class="logo-address">
+                    <a class="logo link" href="">Web<span class="logo-footer">Studio</span></a>
+                    <address class="address-block">
+                        <ul class="address-list list">
+                            <li class="address-list__link"><a class="address-list link" href="" target="_blank"
+                                    rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="address-list__link"><a class="address-list__mail link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="address-list__tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social-block">
+                    <p class="footer-social-text">присоединяйтесь</p>
+                    <ul class="social-list footer-social-list list">
+                        <li class="social-list__item footer-social-list__item">
+                            <a class="social-list__link footer-social-list__link" href="">
+                                <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list__item footer-social-list__item">
+                            <a class="social-list__link footer-social-list__link" href="">
+                                <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list__item footer-social-list__item">
+                            <a class="social-list__link footer-social-list__link" href="">
+                                <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list__item footer-social-list__item">
+                            <a class="social-list__link footer-social-list__link" href="">
+                                <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div class="footer-social-block">
-                <p class="footer-social-text">присоединяйтесь</p>
-                <ul class="social-list footer-social-list list">
-                    <li class="social-list__item footer-social-list__item">
-                        <a class="social-list__link footer-social-list__link" href="">
-                            <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
-                                <use href="./images/sprite.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item footer-social-list__item">
-                        <a class="social-list__link footer-social-list__link" href="">
-                            <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
-                                <use href="./images/sprite.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item footer-social-list__item">
-                        <a class="social-list__link footer-social-list__link" href="">
-                            <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
-                                <use href="./images/sprite.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item footer-social-list__item">
-                        <a class="social-list__link footer-social-list__link" href="">
-                            <svg class="social-list__icon footer-social-list__icon" width="20px" height="20px">
-                                <use href="./images/sprite.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <form action="#" class="email-form">
                 <p class="email-form__text">Подпишитесь на рассылку</p>
@@ -456,6 +508,7 @@
             </form>
         </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
