--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <a class="logo nav_logo link" href="">Web<span class="logo__header">Studio</span></a>
                 <ul class="site-nav list">
                     <li class="site-nav__list">
-                        <a class="site-nav__link link current" href="./index.html">Студия</a>
+                        <a class="site-nav__link link" href="./index.html">Студия</a>
                     </li>
                     <li class="site-nav__list">
                         <a class="site-nav__link link current" href="./portfolio.html">Портфолио</a>
