--- a/portfolio.html
+++ b/portfolio.html
@@ -115,10 +115,10 @@
                     <li class="button-list_link">
                         <button class="button-list_button" type="button">Приложения</button>
                     </li>
-                    <li class="button-list_link">
+                    <li class="button-list_link margin">
                         <button class="button-list_button" type="button">Дизайн</button>
                     </li>
-                    <li class="button-list_link">
+                    <li class="button-list_link margin">
                         <button class="button-list_button" type="button">Маркетинг</button>
                     </li>
                 </ul>
